--- a/fense-server/pom.xml
+++ b/fense-server/pom.xml
@@ -12,7 +12,6 @@
 	<name>fense-server</name>
 	<description>fense Server</description>
 	<properties>
-		<spring-boot.version>2.1.12.RELEASE</spring-boot.version>
 		<fastjson.version>1.2.68.sec10</fastjson.version>
 		<lombok.version>1.18.0</lombok.version>
 		<slf4j.version>1.7.30</slf4j.version>
@@ -62,7 +61,6 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>5.1.13.RELEASE</version>
 		</dependency>
 
 		<dependency>
@@ -79,7 +77,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-commons</artifactId>
-			<version>2.1.6.RELEASE</version>
+			<version>3.0.4</version>
 		</dependency>
 
 		<dependency>
@@ -283,7 +281,14 @@
 		<repository>
 			<id>cloudera</id>
 			<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
 		</repository>
+
 	</repositories>
 
 </project>
