--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.12.RELEASE</version>
+        <version>2.5.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -30,9 +30,9 @@
         <clickhouse-jdbc.version>0.2.4</clickhouse-jdbc.version>
         <hive-jdbc.version>2.1.1-cdh6.0.1</hive-jdbc.version>
         <calcite.version>1.26.0</calcite.version>
-        <avatica.version>1.17.0</avatica.version>
+        <avatica.version>1.18.0</avatica.version>
         <fastjson.version>1.2.78</fastjson.version>
-        <spring-boot.version>2.1.12.RELEASE</spring-boot.version>
+        <spring-boot.version>2.5.5</spring-boot.version>
         <protobuf-maven-plugin.version>0.5.0</protobuf-maven-plugin.version>
         <protoc.version>3.5.1-1</protoc.version>
         <protoc-gen-grpc-java.version>1.18.0</protoc-gen-grpc-java.version>
