bugfix：failed to handle get /error request

--- a/fense-jdbc/src/main/resources/log4j.properties
+++ b/fense-jdbc/src/main/resources/log4j.properties
@@ -14,15 +14,19 @@
 # limitations under the License.
 
 # Root logger is configured at INFO and is sent to A1
-log4j.rootLogger=INFO, Console
+log4j.rootLogger=INFO, stdout, R
 
-# A1 goes to the console
-log4j.appender.Console=org.apache.log4j.ConsoleAppender
+# stdout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%5p [%t] %c{2}:%L %m%n
+log4j.appender.stdout.Encoding=UTF-8
 
-# Set the pattern for each log message
-log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p %c [%L] - %m%n
-
-log4j.logger.com.qihoo.qsql.org.apache.calcite.runtime=INFO
-log4j.logger.org.apache.calcite.metadata=INFO
-log4j.logger.com.qihoo.qsql.org.apache.calcite.plan.plan=INFO
+# rolling log file
+log4j.appender.R=org.apache.log4j.RollingFileAppender
+log4j.appender.R.maxFileSize=1GB
+log4j.appender.R.maxBackupIndex=10
+log4j.appender.R.layout=org.apache.log4j.PatternLayout
+log4j.appender.R.layout.ConversionPattern=%5p [%t] %d{ISO8601} %c (line %L) %m%n
+log4j.appender.R.File=logs/jdbc.log
+log4j.appender.R.Encoding=UTF-8
