--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ HELP.md
 target/
 vcs.xml
 uiDesigner.xml
+dependency-reduced-pom.xml
 .mvn
 # !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
